# seu-dip

./: .gitignore  CMakeLists.txt
qml/: main.qml
qml/components/: ImageViewer.qml
src/: main.cpp
src/processors/: CustomProcessor.hpp  OpenCVProcessor.hpp
src/qml/: AppState.hpp  ImageProvider.hpp  OpenCVImageProvider.hpp
src/utility/: OpenCVProcessor.hpp
